<resources>

    <!-- 시간표 -->
    <string name="timetable">%s 시간표</string>
    <string name="title_bus_timetable">버스 시간표</string>
    <string name="shuttle_timetable">셔틀버스 시간표</string>
    <string name="express_timetable">대성버스 시간표</string>
    <string name="city_timetable">시내버스 시간표</string>
    <string name="request_for_incorrect_information">정보가 정확하지 않나요?</string>
    <string name="guide_cheonan_station">천안 터미널 승차</string>
    <string name="guide_koreatech_station">코리아텍 승차</string>
    <string name="ride">%s 승차</string>
    <string name="all_bus_type">전체 차종</string>
    <string name="tab_shuttle">셔틀</string>
    <string name="tab_express">대성</string>
    <string name="tab_city">시내</string>
    <string name="all_routes">전체</string>
    <string name="weekday_routes">주중노선</string>
    <string name="weekend_routes">주말노선</string>
    <string name="circulation_routes">순환노선</string>
    <string name="weekday_routes_simple">주중</string>
    <string name="weekend_routes_simple">주말</string>
    <string name="circulation_routes_simple">순환</string>
    <string name="to_byeongcheon">병천방면</string>
    <string name="to_cheonan">천안방면</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="updated_at">업데이트 날짜 : %s</string>
    <string name="n400">400번</string>
    <string name="n402">402번</string>
    <string name="n405">405번</string>
    <string name="routes">노선</string>
    <string name="operating">운행</string>
    <string name="node_name">승하차장명</string>
    <string name="timetable_semester_information">%s(%s ~ %s)의 시간표가 제공됩니다.</string>
    <string name="tab_title_going">등교</string>
    <string name="tab_title_return">하교</string>

    <!-- 교통편 조회 -->
    <string name="title_bus_search">교통편 조회하기</string>
    <string name="introduce_bus_search">목적지까지 가장 빠른 교통편을 알려드릴게요.</string>
    <string name="caution_possibly_inaccurate">학기 중 시간표와 다를 수 있습니다.</string>
    <string name="departure">출발</string>
    <string name="arrival">도착</string>
    <string name="select_departure">출발지 선택</string>
    <string name="select_arrival">도착지 선택</string>
    <string name="swap_content_description">출발지와 도착지를 바꾸기</string>
    <string name="action_search">조회하기</string>
    <string name="question_departure">어디서 출발하시나요?</string>
    <string name="question_arrival">목적지가 어디인가요?</string>
    <string name="action_select_arrival">도착지 선택하기</string>
    <string name="confirm_selection">확인하기</string>
    <string name="koreatech">코리아텍</string>
    <string name="cheonan_station">천안역</string>
    <string name="cheonan_terminal">천안터미널</string>
    <string name="set_time_content_description">시간 설정하기</string>
    <string name="set_departure_time">출발 시각 설정</string>
    <string name="caution_timetable_period">현재는 정규학기(12월 20일까지)의 시간표를 제공하고 있어요.</string>
    <string name="departure_now">지금 출발</string>
    <string name="complete">완료</string>
    <string name="today">오늘</string>
    <string name="search_result_direction_title">%s → %s</string>
    <string name="select_bus_type_content_description">버스 종류 선택하기</string>

    <!-- Main -->
    <string name="main_title_bus_timetable">버스 시간표</string>
    <string name="main_title_bus_search">가장 빠른 버스</string>
    <string name="shortcut">바로가기</string>
    <string name="see">조회하기</string>
    <string name="bus">버스</string>
    <string name="unibus_shortcut_content_description">유니버스 바로가기</string>
    <string name="shuttle_ticket">셔틀 승차권</string>

    <!-- Common -->
    <string name="error">오류</string>
    <string name="fail_to_load_screen_description">화면을 불러오지 못했어요</string>
    <string name="refresh">다시 시도하기</string>
    <string name="no_result">결과 없음</string>
    <string name="empty_description">검색 결과가 없어요</string>
</resources>