<resources>
    <string name="callvan_entry_title">콜밴팟 모집</string>
    <string name="callvan_entry_find_title">콜밴팟 찾기</string>
    <string name="callvan_entry_find_description">바로가기</string>
    <string name="callvan_entry_recruit_title">콜밴팟 모집</string>
    <string name="callvan_entry_recruit_description">글 작성하기</string>

    <string name="callvan_notification_mark_as_read_all">모두 읽음으로 표시</string>
    <string name="callvan_notification_delete_all">알림 전체 삭제</string>
    <string name="callvan_notification_top_bar">알림</string>
    <string name="callvan_notification_participants_form">%1$d/%2$d</string>
    <string name="callvan_notification_title_recruitment_complete">콜밴팟 인원 모집 완료</string>
    <string name="callvan_notification_title_member_joined">콜밴팟 인원 참여</string>
    <string name="callvan_notification_title_new_message">새 메시지 도착</string>
    <string name="callvan_notification_title_departure_imminent">콜밴팟 출발 시간 임박</string>
    <string name="callvan_notification_delete_all_title">알림을 모두 삭제할까요?</string>
    <string name="callvan_notification_delete_all_message">삭제한 알림은 되돌릴 수 없습니다.</string>
    <string name="callvan_notification_delete_all_confirm">예</string>
    <string name="callvan_notification_delete_all_cancel">아니요</string>
    <string name="callvan_notification_empty_title">아직 알림이 없어요</string>
    <string name="callvan_notification_empty_description">콜밴팟 관련 알림이 오면 여기에 표시돼요</string>

    <string name="callvan_detail_top_bar">콜밴팟</string>
    <string name="callvan_detail_participants_header">참여자 리스트</string>
    <string name="callvan_detail_participants_count">%1$d/%2$d</string>
    <string name="callvan_detail_departure">출발: %1$s</string>
    <string name="callvan_detail_destination">도착: %1$s</string>
    <string name="callvan_detail_me_suffix">(나)</string>
    <string name="callvan_detail_participant_name_me">%1$s (나)</string>
    <string name="callvan_detail_participant_reported">(신고됨)</string>
    <string name="callvan_detail_enter_chat">단체 채팅방 입장</string>
    <string name="callvan_detail_participant_report">신고하기</string>

    <string name="callvan_report_top_bar">신고하기</string>
    <string name="callvan_report_header_title">신고 이유를 선택해주세요.</string>
    <string name="callvan_report_header_description">신고가 접수되면 운영정책에 따라 검토 후 주변 기능이 제한될 수 있습니다. 본 서비스는 비용 정산에 직접 관여하지 않습니다.</string>
    <string name="callvan_report_next">다음</string>
    <string name="callvan_report_other_placeholder">신고 사유를 입력해주세요.</string>
    <string name="callvan_report_other_reason_length">%1$d/%2$d</string>

    <string name="callvan_report_detail_title">신고 상황을 입력해주세요.</string>
    <string name="callvan_report_detail_placeholder">신고 상황을 확인하기 위해 자세히 작성해주세요.</string>
    <string name="callvan_report_detail_length">%1$d/%2$d</string>
    <string name="callvan_report_evidence_title">증빙자료 첨부</string>
    <string name="callvan_report_evidence_description">신고 상황에 대한 채팅내역 등 증빙자료로 사용할 이미지를 첨부해주세요.</string>
    <string name="callvan_report_evidence_count">%1$d/%2$d</string>
    <string name="callvan_report_add_photo">사진 등록하기</string>
    <string name="callvan_report_image_remove">이미지 삭제</string>

    <string name="callvan_report_reason_no_show_title">노쇼</string>
    <string name="callvan_report_reason_no_show_description">참여 신청 후 약속 장소에 나타나지 않았습니다.</string>
    <string name="callvan_report_reason_non_payment_title">비용 미납</string>
    <string name="callvan_report_reason_non_payment_description">콜밴 비용을 납부하지 않았습니다.</string>
    <string name="callvan_report_reason_profanity_title">욕설</string>
    <string name="callvan_report_reason_profanity_description">욕설, 성적인 언어, 비방하는 언어를 사용했습니다.</string>
    <string name="callvan_report_reason_other_title">기타</string>

    <string name="filter_container">필터</string>
    <string name="filter_list_top_bar">콜밴팟</string>
    <string name="filter_list_reset">초기화</string>
    <string name="filter_list_adapt">적용하기</string>
    <string name="filter_list_sort_order">정렬</string>
    <string name="filter_list_recruitment_status">모집 상태</string>
    <string name="filter_list_origin">출발지</string>
    <string name="filter_list_destination">도착지</string>
    <string name="filter_list_other_place_hint">기타 장소는 검색창을 이용해주세요.</string>
    <string name="filter_list_all">전체</string>
    <string name="filter_list_my_posts">내 게시물</string>
    <string name="filter_list_joined_posts">참여중인 게시물</string>
    <string name="filter_list_list_type">목록</string>
    <string name="filter_list_front_gate">정문</string>
    <string name="filter_list_back_gate">후문</string>
    <string name="filter_list_tennis_court">테니스장</string>
    <string name="filter_list_dormitory_main">본관동</string>
    <string name="filter_list_dormitory_sub">별관동</string>
    <string name="filter_list_terminal">천안터미널</string>
    <string name="filter_list_station">천안역</string>
    <string name="filter_list_asan_station">천안아산역</string>
    <string name="filter_list_recruiting">모집중</string>
    <string name="filter_list_closed">모집마감</string>
    <string name="filter_list_completed">모집완료</string>
    <string name="filter_list_latest_desc">게시글 등록순 (내림차순)</string>
    <string name="filter_list_latest_asc">게시글 등록순 (오름차순)</string>
    <string name="filter_list_departure_desc">출발일 (내림차순)</string>
    <string name="filter_list_departure_asc">출발일 (오름차순)</string>
    <string name="callvan_search_hint">검색어를 입력해주세요.</string>
    <string name="callvan_report_submit_success">사용자가 신고되었습니다.</string>

    <string name="callvan_create_top_bar">콜밴팟</string>
    <string name="callvan_create_departure_label">출발</string>
    <string name="callvan_create_arrival_label">도착</string>
    <string name="callvan_create_departure_placeholder">출발지 선택</string>
    <string name="callvan_create_arrival_placeholder">도착지 선택</string>
    <string name="callvan_create_departure_picker_question">출발지가 어디인가요?</string>
    <string name="callvan_create_arrival_picker_question">도착지가 어디인가요?</string>
    <string name="callvan_create_location_picker_select">선택하기</string>
    <string name="callvan_create_location_picker_confirm_other">입력 완료</string>
    <string name="callvan_create_date_label">출발일</string>
    <string name="callvan_create_date_hint">출발 날짜를 선택해주세요.</string>
    <string name="callvan_date_picker_year_suffix">년</string>
    <string name="callvan_date_picker_month_suffix">월</string>
    <string name="callvan_date_picker_day_suffix">일</string>
    <string name="callvan_create_time_label">출발 시각</string>
    <string name="callvan_create_time_hint">출발 시각을 선택해주세요.</string>
    <string name="callvan_create_participants_label">참여 인원</string>
    <string name="callvan_create_participants_hint_bold">본인을 포함한</string>
    <string name="callvan_create_participants_hint_normal"> 참여 인원 수를 선택해주세요.</string>
    <string name="callvan_create_participants_count">%d 명</string>
    <string name="callvan_create_picker_reset">초기화</string>
    <string name="callvan_create_picker_confirm">확인</string>
    <string name="callvan_create_submit_notice">※ 모든 항목을 다 작성해주세요.</string>
    <string name="callvan_create_submit">작성 완료</string>


    <string name="callvan_location_front_gate">정문</string>
    <string name="callvan_location_back_gate">후문</string>
    <string name="callvan_location_tennis_court">테니스장</string>
    <string name="callvan_location_dormitory_main">본관동</string>
    <string name="callvan_location_dormitory_sub">별관동</string>
    <string name="callvan_location_terminal">천안 터미널</string>
    <string name="callvan_location_station">천안역</string>
    <string name="callvan_location_asan_station">천안아산역</string>
    <string name="callvan_location_custom">기타</string>

    <string name="callvan_report_error_image_upload_failed">이미지 업로드에 실패했습니다.</string>
    <string name="callvan_report_error_self">본인을 신고할 수 없습니다.</string>
    <string name="callvan_report_error_already_pending">이미 신고가 접수된 사용자입니다.</string>
    <string name="callvan_report_error_only_participant">같은 콜밴 참여자만 신고할 수 있습니다.</string>
    <string name="callvan_report_error_failed">신고에 실패했습니다. 다시 시도해주세요.</string>

    <string name="callvan_btn_join">참여하기</string>
    <string name="callvan_btn_cancel_join">참여취소</string>
    <string name="callvan_btn_closed">모집마감</string>
    <string name="callvan_btn_close">마감하기</string>
    <string name="callvan_btn_re_recruit">재모집</string>
    <string name="callvan_btn_complete">이용완료</string>

    <string name="callvan_login_title">콜밴팟에 참여하려면 로그인이 필요해요.</string>
    <string name="callvan_login_login">로그인하기</string>
    <string name="callvan_login_close">닫기</string>
    <string name="callvan_confirm_join_title">해당 콜밴팟에 참여할까요?</string>
    <string name="callvan_confirm_cancel_title">해당 콜밴팟 참여를 취소할까요?</string>
    <string name="callvan_confirm_close_title">해당 콜밴팟 모집을 마감할까요?</string>
    <string name="callvan_confirm_reopen_title">해당 콜밴팟을 다시 모집할까요?</string>
    <string name="callvan_confirm_positive">예</string>
    <string name="callvan_confirm_negative">아니요</string>
    <string name="callvan_complete_title">이용 완료 상태로 변경할까요?</string>
    <string name="callvan_complete_description">• 콜밴 이용(탑승, 정산)이 모두 완료된 뒤 눌러야 합니다.\n• 완료 시 대화 내역이 삭제되며, 되돌릴 수 없습니다.</string>
    <string name="callvan_write_btn">모집하기</string>

    <string name="callvan_am">오전</string>
    <string name="callvan_pm">오후</string>

    <string name="callvan_create_past_time_error">현재 시간 이후로만 출발 시각을 설정할 수 있습니다.</string>

    <string name="callvan_error_post_not_recruiting">현재 모집 중인 콜밴팟이 아닙니다.</string>
    <string name="callvan_error_post_full">콜밴팟 인원이 가득 찼습니다.</string>
    <string name="callvan_error_already_joined">이미 참여한 콜밴팟입니다.</string>
    <string name="callvan_error_not_found_article">존재하지 않는 콜밴팟입니다.</string>
    <string name="callvan_error_forbidden_author">작성자만 수행할 수 있습니다.</string>
    <string name="callvan_error_forbidden_participant">참여자만 수행할 수 있습니다.</string>
    <string name="callvan_error_post_author_cannot_leave">작성자는 참여를 취소할 수 없습니다.</string>
    <string name="callvan_error_reopen_failed_full">인원이 가득 차 재모집할 수 없습니다.</string>
    <string name="callvan_error_reopen_failed_time">출발 시간이 지나 재모집할 수 없습니다.</string>
    <string name="callvan_error_notification_subscription_failed">알림 설정에 실패했습니다.</string>
    <string name="callvan_error_unknown">오류가 발생했습니다. 다시 시도해주세요.</string>

    <string name="callvan_create_submit_error_invalid_request">요청 형식이 올바르지 않습니다.</string>
    <string name="callvan_create_submit_error_invalid_custom_location">사용자 지정 장소명이 올바르지 않습니다.</string>
    <string name="callvan_create_submit_error_not_found_user">사용자를 찾을 수 없습니다.</string>
    <string name="callvan_create_submit_error_unknown">게시글 작성에 실패했습니다.</string>

    <string name="callvan_ban_date_format">%1$d월 %2$d일</string>
    <string name="callvan_ban_title_temporary">%1$d일 이용 정지</string>
    <string name="callvan_ban_title_permanent">영구 이용 정지</string>
    <string name="callvan_ban_description_temporary">해당 계정은 %1$s까지\n콜벤팟 기능을 사용할 수 없습니다.</string>
    <string name="callvan_ban_description_permanent">해당 계정은 콜벤팟 기능을\n영구적으로 사용할 수 없습니다.</string>
    <string name="callvan_ban_close">닫기</string>

    <string name="callvan_notification_suggest_title">알림을 켜볼까요?</string>
    <string name="callvan_notification_suggest_description">채팅부터 출발까지, 필요한 순간을 놓치지 않게 알려드려요</string>
    <string name="callvan_notification_suggest_confirm">알림 켜기</string>
    <string name="callvan_notification_suggest_cancel">나중에 할게요</string>
</resources>