...
    <string name="detail_error_load_events">행사를 불러오지 못했습니다.</string>
    <string name="detail_error_delete_event">행사가 삭제되지 않았습니다.</string>
    <string name="detail_error_unkown">알 수 없는 오류가 발생했습니다.</string>

    <string name="detail_introduction_no_content">동아리의 상세 소개가 아직 작성되지 않았어요</string>

    <string name="club_main_activity_widget_title">동아리</string>
    <string name="club_main_widget_category_performance">공연</string>
    <string name="club_main_widget_category_sports">운동</string>
    <string name="club_main_widget_category_religious">종교</string>
    <string name="club_main_widget_category_hobby">취미</string>
    <string name="club_main_widget_category_academic">학술</string>
    <string name="club_main_widget_popular_club">인기 동아리</string>
    <string name="club_main_widget_club_list">동아리 목록</string>
    <string name="club_main_widget_go">바로가기</string>
    <string name="club_list_title">동아리</string>
    <string name="club_list_list">동아리 목록</string>
    <string name="club_list_create_club">동아리 생성하기</string>
    <string name="club_list_search_hint">동아리 명을 입력하세요.</string>
    <string name="club_list_dropdown_sort_none">생성순</string>
    <string name="club_list_dropdown_sort_hits">조회순</string>
    <string name="club_list_dropdown_sort_recruitment_updated_desc">모집 생성순</string>
    <string name="club_list_dropdown_sort_recruitment_deadline_asc">모집 마감순</string>
    <string name="club_list_create_dialog_title">동아리 생성 안내사항</string>
...
