<resources>
    <string name="no_photo">사진 없음</string>
    <string name="sold_out">품절</string>
    <string name="sold_out_menu">품절된 메뉴입니다.</string>
    <string name="action_share">카카오톡으로 식단 공유하기</string>
    <string name="action_share_origin">공유하기</string>
    <string name="dining_appbar_title">식단</string>
    <string name="dining_item_kcal_format">%1$skcal</string>
    <string name="dining_item_price_format">%1$s원/%2$s원</string>
    <string name="dining_notice_appbar_title">학생식당정보</string>
    <string name="dining_notice_title_format">%1$s %2$s 운영시간</string>
    <string name="dining_notice_location">위치</string>
    <string name="dining_notice_phone">전화번호</string>
    <string name="dining_notice_updated_at_format">%1$s 업데이트</string>
    <string name="dining_notice_subtitle_time_format">%1$s 운영시간</string>
    <string name="dining_notice_timetable_type">시간</string>
    <string name="dining_notice_timetable_open_time">시작시간</string>
    <string name="dining_notice_timetable_close_time">마감시간</string>

    <string name="dining_notification_on_boarding">알림 설정을 허용하고\n식단 품절 알림을 받아보세요!</string>
    <string name="set_dining_sold_out_notification">식단 품절 알림 받기</string>
    <string name="set_image_upload_notification">식단 사진 업로드 알림 받기</string>
    <string name="navigate_to_notification_setting">알림 설정 바로가기</string>

    <string name="caution_dining_changeable">식단 정보는 운영 상황에 따라 변동될 수 있습니다.</string>
    <string name="photo_not_provided_on_weekend">주말은 식단 이미지를 제공하지 않습니다.</string>

    <string name="kakaolink_host">kakaolink</string>
    <string name="kakao_share_unable">카카오톡 공유에 실패했습니다.</string>

    <string name="dining_menu_dislike">오늘 학식 메뉴가 별로라면?</string>
    <string name="view_nearby_stores">주변상점 보기</string>

    <!-- sold out report -->
    <string name="dining_sold_out_report_title">%s 식단 품절 제보하기</string>
    <string name="dining_sold_out_report_submit">품절 제보하기</string>
    <string name="dining_sold_out_report_course_title">품절 코스 선택</string>
    <string name="dining_sold_out_report_photo_title">품절 사진 촬영</string>
    <string name="dining_sold_out_report_photo_action">사진 촬영하기</string>
    <string-array name="dining_sold_out_report_photo_guides">
        <item>배식대의 품절 안내판 촬영</item>
        <item>학식당 앞 품절 식판 안내</item>
        <item>품절 상태 확인 가능한 사진</item>
        <item>품절 미확인 시 제보 반려</item>
        <item>앱 내 직접 촬영 사진만 가능</item>
    </string-array>
    <string name="dining_sold_out_report_success_format">%1$s 품절 제보되었습니다.</string>
    <string name="dining_sold_out_report_failed">품절 제보에 실패했습니다.</string>
    <string name="dining_sold_out_report_date_not_allowed">오늘 식단만 제보할 수 있습니다.</string>
    <string name="dining_sold_out_report_invalid_image">제보 사진이 올바르지 않습니다.</string>
    <string name="dining_sold_out_report_not_found_dining">식단을 찾을 수 없습니다.</string>
    <string name="dining_sold_out_report_already_sold_out">이미 품절된 식단입니다.</string>
    <string name="dining_sold_out_report_already_submitted">이미 제보한 식단입니다.</string>
    <string name="dining_sold_out_image_upload_failed">이미지 업로드에 실패했습니다.</string>
    <string name="dining_sold_out_report_not_operation_time">제보 가능한 시간이 아닙니다.</string>
    <string name="dining_sold_out_report_no_dining_to_report">제보 가능한 식단이 없습니다.</string>

    <!-- widget -->
    <string name="dining_non_upload">학교에서 식단이 업로드 되지 않았습니다.</string>
</resources>