...
            semester = "25-하계방학",
            opens = listOf(
                OpenCloseInfo(
                    dayOfWeek = CoopShopDayType.Weekday,
                    opensByDayType = listOf(
                        OpenCloseTimeInfo(
                            type = "아침",
                            openTime = "08:00",
                            closeTime = "09:00"
                        ),
                        OpenCloseTimeInfo(
                            type = "점심",
                            openTime = "13:00",
...
