appId: ${APP_ID}
env:
  APP_ID: in.koreatech.koin.dev
---
- runFlow: ../common/open_drawer.yaml
- tapOn:
    id: "${APP_ID}:id/navi_item_bus_timetable"
- extendedWaitUntil:
    visible: "버스 시간표"
    timeout: 15000
- assertVisible: "버스 시간표"
- assertVisible: "셔틀버스 시간표"
- pressKey: BACK
- runFlow: ../common/open_drawer.yaml
- tapOn:
    id: "${APP_ID}:id/navi_item_bus_search"
- extendedWaitUntil:
    visible: "교통편 조회하기"
    timeout: 15000
- assertVisible: "교통편 조회하기"
- assertVisible: "출발지 선택"
