appId: ${APP_ID}
env:
  APP_ID: in.koreatech.koin.dev
---
- runFlow: ../common/open_drawer.yaml
- scrollUntilVisible:
    element:
      id: "${APP_ID}:id/navi_item_callvan"
    direction: DOWN
    timeout: 10000
- tapOn:
    id: "${APP_ID}:id/navi_item_callvan"
- tapOn:
    text: "알림 켜기"
    optional: true
- extendedWaitUntil:
    visible: "모집하기"
    timeout: 10000

- tapOn: "알림"
- extendedWaitUntil:
    visible: "알림"
    timeout: 10000
- assertVisible: "알림"
