appId: ${APP_ID}
env:
  APP_ID: in.koreatech.koin.dev
---
- runFlow: ../common/open_drawer.yaml
- tapOn:
    id: "${APP_ID}:id/navi_item_dining"
- runFlow:
    when:
      visible: "알림 설정 바로가기"
    commands:
      - pressKey: BACK
- extendedWaitUntil:
    visible: "식단"
    timeout: 15000
- assertVisible: "식단"
- assertVisible: "아침"
